kozo/src/syntax_tree/parser/tests/snapshots/kozo__syntax_tree__parser__tests__app__app_1_arg.snap
---
source: src/syntax_tree/parser/tests/app.rs
expression: "&cst"
---
App(
    App {
        lparen: ByteIndex(
            0,
        ),
        callee: Deb(
            NumberLiteral {
                value: 0,
                span: (
                    ByteIndex(
                        1,
                    ),
                    ByteIndex(
                        2,
                    ),
                ),
            },
        ),
        args: Cons(
            Nil,
            Deb(
                NumberLiteral {
                    value: 1,
                    span: (
                        ByteIndex(
                            3,
                        ),
                        ByteIndex(
                            4,
                        ),
                    ),
                },
            ),
        ),
        rparen: ByteIndex(
            4,
        ),
    },
)
